fixed the directory structure

--- a/architecture-examples/closure/index.htm
+++ b/architecture-examples/closure/index.htm
@@ -33,7 +33,7 @@
 			href="http://www.scottlogic.co.uk/blog/chris/">Chris Price</a>
 	</div>
 	<!-- The compiled version (to update run java -jar build/plovr.jar build plovr.json > web/compiled.js) -->
-	<script type="text/javascript" src="compiled.js"></script>
+	<script type="text/javascript" src="js/compiled.js"></script>
 	<!-- The RAW development version (to serve the files run java -jar build/plovr.jar serve plovr.json) -->
 	<!-- <script type="text/javascript" src="http://localhost:9810/compile?id=todomvc&mode=RAW"></script> -->
 	<!-- The COMPILED development version (to serve the files run java -jar build/plovr.jar serve plovr.json) -->
