adding reference to the new closure example

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -60,6 +60,7 @@
             <li><a href="http://dojotoolkit.org/">Dojo</a></li> 
             <li><a href="http://developer.yahoo.com/yui/">YUILibrary</a></li> 
             <li><a href="http://angularjs.org/">AngularJS</a></li> 
+            <li><a href="http://code.google.com/closure/">Closure</a></li>
             <li><a href="https://github.com/jgallen23/fidel">Fidel.js</a></li>
             <li><a href="http://kmalakoff.github.com/knockback/">Knockback.js</a></li>
             <li><a href="https://github.com/brokenseal/broke-client">Broke.js</a></li> 
@@ -71,7 +72,8 @@
             <li><a href="../architecture-examples/angularjs_persistencejs/index.html">Angular + PersistenceJS</a></li> 
             <li><a href="../architecture-examples/backbone/index.html">Backbone.js</a></li>  
             <li><a href="../architecture-examples/broke/index.html">Broke.js</a></li> 
-            <li><a href="../architecture-examples/dojo/index.html">Dojo</a></li>  
+            <li><a href="../architecture-examples/dojo/index.html">Dojo</a></li>
+            <li><a href="../architecture-examples/closure/index.html">Closure</a></li>   
             <li><a href="../architecture-examples/emberjs/index.html">Ember.js</a></li> 
             <li><a href="../architecture-examples/fidel/index.html">Fidel.js</a></li>
             <li><a href="../architecture-examples/javascriptmvc/todo/todo/index.html">JavaScriptMVC</a></li> 
@@ -105,6 +107,7 @@
             <li><a href="https://twitter.com/ffesseler">Florian Fesseler</a></li>
             <li><a href="https://github.com/jthomas">James Thomas</a></li>
             <li><a href="https://github.com/sindresorhus">Sindre Sorhus</a></li>
+            <li><a href="https://github.com/chrisprice">Chris Price</a></li>
           </ul>
 
 
@@ -176,7 +179,6 @@
       </div>
 
       <footer>
-      <p>&copy; TodoMVC, Addy Osmani 2011</p>
       </footer>
     </div>
   </div>
