Delete introduction folder and update paths

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<link href="css/bootstrap-responsive.min.css" rel="stylesheet">
-		<link href="css/main.css" rel="stylesheet">
+		<link href="site/css/bootstrap.min.css" rel="stylesheet">
+		<link href="site/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<link href="site/css/main.css" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container">
 			<header class="hero-unit row">
 				<div class="span4 screenshot">
-					<img src="screenshot.png" width="528" height="330">
+					<img src="site/screenshot.png" width="528" height="330">
 				</div>
 				<div class="span5 header-title">
 					<h1>TodoMVC</h1>
@@ -35,28 +35,28 @@
 				<div class="span5" id="demos">
 					<h2>Demos</h2>
 					<ul class="nav nav-pills">
-						<li><a href="todomvc/architecture-examples/backbone/index.html">Backbone.js</a></li>
-						<li><a href="todomvc/dependency-examples/backbone_require/index.html">Backbone.js + RequireJS</a></li>
-						<li><a href="todomvc/architecture-examples/emberjs/index.html">Ember.js</a></li>
-						<li><a href="todomvc/architecture-examples/javascriptmvc/todo/todo/index.html">JavaScriptMVC</a></li>
-						<li><a href="todomvc/architecture-examples/spine/index.html">Spine.js</a></li>
-						<li><a href="todomvc/architecture-examples/sammyjs/index.html">Sammy.js</a></li>
+						<li><a href="architecture-examples/backbone/index.html">Backbone.js</a></li>
+						<li><a href="dependency-examples/backbone_require/index.html">Backbone.js + RequireJS</a></li>
+						<li><a href="architecture-examples/emberjs/index.html">Ember.js</a></li>
+						<li><a href="architecture-examples/javascriptmvc/todo/todo/index.html">JavaScriptMVC</a></li>
+						<li><a href="architecture-examples/spine/index.html">Spine.js</a></li>
+						<li><a href="architecture-examples/sammyjs/index.html">Sammy.js</a></li>
 					</ul>
 					<ul class="nav nav-pills">
-						<li><a href="todomvc/architecture-examples/knockoutjs/index.html">KnockoutJS (MVVM)</a></li>
-						<li><a href="todomvc/architecture-examples/knockback/index.html">Knockback.js</a></li>
-						<li><a href="todomvc/architecture-examples/dojo/index.html">Dojo</a></li>
-						<li><a href="todomvc/architecture-examples/yuilibrary/index.html">YUILibrary</a></li>
-						<li><a href="todomvc/architecture-examples/angularjs/index.html">AngularJS</a></li>
-						<li><a href="todomvc/architecture-examples/angularjs_persistencejs/index.html">Angular + PersistenceJS</a></li>
+						<li><a href="architecture-examples/knockoutjs/index.html">KnockoutJS (MVVM)</a></li>
+						<li><a href="architecture-examples/knockback/index.html">Knockback.js</a></li>
+						<li><a href="architecture-examples/dojo/index.html">Dojo</a></li>
+						<li><a href="architecture-examples/yuilibrary/index.html">YUILibrary</a></li>
+						<li><a href="architecture-examples/angularjs/index.html">AngularJS</a></li>
+						<li><a href="architecture-examples/angularjs_persistencejs/index.html">Angular + PersistenceJS</a></li>
 					</ul>
 					<ul class="nav nav-pills">
-						<li><a href="todomvc/architecture-examples/extjs/index.html">Ext.js</a></li>
-						<li><a href="todomvc/architecture-examples/broke/index.html">Broke.js</a></li>
-						<li><a href="todomvc/architecture-examples/fidel/index.html">Fidel.js</a></li>
-						<li><a href="todomvc/architecture-examples/closure/index.html">Closure</a></li>
-						<li><a href="todomvc/architecture-examples/jquery/index.html">jQuery</a></li>
-						<li><a href="todomvc/reference-examples/vanillajs/index.html">Vanilla JS</a></li>
+						<li><a href="architecture-examples/extjs/index.html">Ext.js</a></li>
+						<li><a href="architecture-examples/broke/index.html">Broke.js</a></li>
+						<li><a href="architecture-examples/fidel/index.html">Fidel.js</a></li>
+						<li><a href="architecture-examples/closure/index.html">Closure</a></li>
+						<li><a href="architecture-examples/jquery/index.html">jQuery</a></li>
+						<li><a href="reference-examples/vanillajs/index.html">Vanilla JS</a></li>
 					</ul>
 				</div>
 				<div class="span3">
