Forcing locale to be a value in the built version

--- a/todo-example/dojo/index.html
+++ b/todo-example/dojo/index.html
@@ -7,7 +7,7 @@
 			@import "./css/claro.css";
 	</style>
     <link href="css/todos.css" media="all" rel="stylesheet" type="text/css"/>
-    <script data-dojo-config="async:true, parseOnLoad:true, paths:{'todo':'../../todo'}, deps:['dojo/parser', 'todo/app']" src="./js/dtk/dojo/dojo.js"></script>
+    <script data-dojo-config="async:true, parseOnLoad:true, locale:'en', paths:{'todo':'../../todo'}, deps:['dojo/parser', 'todo/app']" src="./js/dtk/dojo/dojo.js"></script>
   </head>
 
   <body class="claro">
