Add contributor list to the site
Dynamically updated from the GitHub API

--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ had it been designed for web apps">AngularJS</a>
 			<hr>
 			<footer>
 				<p>© TodoMVC. Brought to you by <a href="http://github.com/addyosmani">Addy Osmani</a> (lead), <a href="https://github.com/boushley">Aaron Boushley</a> and <a href="https://github.com/sindresorhus">Sindre Sorhus</a>.</p>
+				<p id="contributor-list">Big thanks to our magnificent contributors: <span></span></p>
 			</footer>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
