Fix some grammatical errors on the site and update the reference to the newest release

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 				</div>
 				<div class="span5 header-title">
 					<h1>TodoMVC</h1>
-					<p>A common learning application for popular JavaScript MV* frameworks. <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://addyosmani.github.com/todomvc" data-via="addyosmani">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></p>
+					<p>
+						A common learning application for popular JavaScript MV* frameworks
+						<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://addyosmani.github.com/todomvc" data-via="addyosmani">Tweet</a>
+					</p>
 					<nav>
-						<a class="btn btn-primary btn-large" href="https://github.com/addyosmani/todomvc/zipball/master">Download (latest)</a>
+						<a class="btn btn-primary btn-large" href="https://github.com/addyosmani/todomvc/zipball/v0.3">Download</a>
 						<a class="btn btn-large" href="http://github.com/addyosmani/todomvc">Follow on GitHub</a>
 					</nav>
 				</div>
@@ -30,7 +32,7 @@
 			<div class="row">
 				<div class="span4">
 					<h2>Introduction</h2>
-					<p>Developers these days are spoiled with choice when it comes to selecting an <strong>MV* framework</strong> for structuring and organizing JavaScript web apps. Backbone, Spine, Ember (SproutCore 2.0), JavaScriptMVC... the list of new and stable solutions goes on and on, but just how do you <strong>decide</strong> on which to use in a sea of so many options?.</p>
+					<p>Developers these days are spoiled with choice when it comes to selecting an <strong>MV* framework</strong> for structuring and organizing JavaScript web apps. Backbone, Spine, Ember (SproutCore 2.0), JavaScriptMVC... the list of new and stable solutions goes on and on, but just how do you <strong>decide</strong> on which to use in a sea of so many options?</p>
 					<p>To help solve this problem, we created <a href="http://github.com/addyosmani/todomvc">TodoMVC</a> - a project which offers the same Todo application implemented using MV* concepts in most of the popular JavaScript MV* frameworks of today.</p>
 					<p>Solutions look and feel the same, have a common simple feature-set and make it <strong>easy</strong> for you to compare the syntax and structure of different frameworks so you can select the one you feel the most comfortable with.</p>
 				</div>
@@ -95,7 +97,7 @@ had it been designed for web apps">AngularJS</a>
 					</ul>
 				</div>
 				<div class="span3">
-					<h2>New In TodoMVC 0.3</h2>
+					<h2>New in TodoMVC 0.3</h2>
 					<ul class="vertical-space">
 						<li>Dojo (MV*) app</li>
 						<li>Closure (MV*) app</li>
@@ -113,14 +115,14 @@ had it been designed for web apps">AngularJS</a>
 					<p>You can get setup with TodoMVC in just a few short steps:</p>
 					<p>
 						<ol class="vertical-space">
-							<li>Download the <a href="https://github.com/addyosmani/todomvc/zipball/v0.2">latest release</a>.</li>
+							<li>Download the <a href="https://github.com/addyosmani/todomvc/zipball/v0.3">latest release</a>.</li>
 							<li>Run TodoMVC on a local server (using <a href="http://www.mamp.info">MAMP</a>, <a href="http://www.wampserver.com/en/">WAMP</a> or another suitable setup). You can then select an app to run using the 'Live demos' link to the left.</li>
 							<li>Browse through the Todo apps, examine their source and discover which framework you might feel the most comfortable working with.</li>
 						</ol>
 					</p>
 				</div>
 				<div class="span4">
-					<h2>Selecting A Framework</h2>
+					<h2>Selecting a Framework</h2>
 					<p>Once you've downloaded the latest release and played around with the apps, you'll want to decide on a specific framework to try out.</p>
 					<p>Study the syntax required for defining models, views and (where applicable) controllers and classes in the frameworks you're interested in and try your hand at editing the code to see how it feels using it first-hand.</p>
 					<p>Please <strong>ensure</strong> that if you're happy with this, you do spend more time investigating the framework (including reading the official docs, the source and it's complete feature list). There's often a lot more to a framework than what we present in our examples.</p>
@@ -138,6 +140,7 @@ had it been designed for web apps">AngularJS</a>
 				<p id="contributor-list">Big thanks to our magnificent contributors: <span></span></p>
 			</footer>
 		</div>
+		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 		<script src="site/js/bootstrap.min.js"></script>
 		<script src="site/js/main.js"></script>
