Website tweak - forgot to add viewport metatag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>TodoMVC</title>
 		<meta name="description" content="A common learning application for popular JavaScript MV* frameworks">
+		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -97,7 +98,7 @@ had it been designed for web apps">AngularJS</a>
 					</ul>
 				</div>
 				<div class="span3">
-					<h2>New in TodoMVC 0.3</h2>
+					<h2>New in version 0.3</h2>
 					<ul class="vertical-space">
 						<li>Dojo (MV*) app</li>
 						<li>Closure (MV*) app</li>
