use base.css from assets.

--- a/architecture-examples/knockoutjs/index.html
+++ b/architecture-examples/knockoutjs/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Knockout.js</title>
-	<link rel="stylesheet" href="css/app.css">
+    <meta charset="utf-8">
+    <title>Knockout.js</title>
+    <link rel="stylesheet" href="../../assets/base.css">
 </head>
 <body>
     <div id="todoapp">
