--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -36,7 +36,7 @@
 
     <script src="js/libs/json2.js"></script>
     <script src="js/libs/jquery-1.7.1.min.js"></script>
-    <script src="js/libs/underscore-1.1.6.js"></script>
+    <script src="js/libs/underscore.js"></script>
     <script src="js/libs/backbone.js"></script>
     <script src="js/libs/backbone-localstorage.js"></script>
     <script src="js/app.js"></script>
@@ -46,17 +46,17 @@
     <script type="text/template" id="item-template">
         <div class="view">
             <input class="toggle" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
-            <label><%= content %></label>
+            <label><%= title %></label>
             <a class="destroy"></a>
         </div>
-        <input class="edit" type="text" value="<%= content %>" />
+        <input class="edit" type="text" value="<%= title %>" />
     </script>
 
     <script type="text/template" id="stats-template">
         <% if (done) { %>
             <a id="clear-completed">Clear <%= done %> completed <%= done == 1 ? 'item' : 'items' %></a>
         <% } %>
-        <div class="todo-count"><%= remaining %> <%= remaining == 1 ? 'item' : 'items' %> left.</div>
+        <div class="todo-count"><b><%= remaining %></b> <%= remaining == 1 ? 'item' : 'items' %> left</div>
     </script>
 
 </body>
