Remove todo item, if edited item is blank or just whitespace

--- a/architecture-examples/knockoutjs/index.html
+++ b/architecture-examples/knockoutjs/index.html
@@ -17,13 +17,13 @@
         <label for="toggle-all">Mark all as complete</label>
         <ul id="todo-list" data-bind="foreach: todos">
             <li data-bind="css: { done: done, editing: editing }">
-                <div class="view" data-bind="event: { dblclick: edit }">
+                <div class="view" data-bind="event: { dblclick: $root.editItem }">
                     <input class="toggle" type="checkbox" data-bind="checked: done">
                     <label data-bind="text: content"></label>
                     <a class="destroy" href="#" data-bind="click: $root.remove"></a>
                 </div>
                 <input class="edit" type="text"
-                       data-bind="value: content, valueUpdate: 'afterkeydown', enterKey: stopEditing, selectAndFocus: editing, event: { blur: stopEditing }"/>
+                       data-bind="value: content, valueUpdate: 'afterkeydown', enterKey: $root.stopEditing, selectAndFocus: editing, event: { blur: $root.stopEditing }"/>
             </li>
         </ul>
     </section>
