--- a/architecture-examples/angularjs/index_new.html
+++ b/architecture-examples/angularjs/index_new.html
@@ -31,9 +31,9 @@
                 </li>
             </ul>
         </section>
-        <footer>
+        <footer ng:show="hasTodos()">
             <a id="clear-completed">Clear completed</a>
-            <div id="todo-count"></div>
+            <div id="todo-count"><b>{{ remainingTodos() }}</b> {{ itemsLeftText() }}</div>
         </footer>
     </div>
     <div id="instructions">
